添加shadcn/ui 组件 button，并配置 tsconfig.json、tailwind.config.json、components.json 中的别名和 include 等字段

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,16 +7,16 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@ui/*": ["./modules/ui/*"],
     }
   },
   "include": [
-    "next-env.d.ts",
-    "next.config.mjs",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "tailwind.config.js"
+    "**/*.js",
+    "**/*.mjs",
+    ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
