添加页面文件，划分文件组织结构(空文件夹下添加.gitkeep文件)

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -9,6 +9,7 @@
     "paths": {
       "@/*": ["./*"],
       "@ui/*": ["./modules/ui/*"],
+      "@saas/*": ["./modules/saas/*"]
     }
   },
   "include": [
