编写组件，header 的 Logo、ColorModeToggle 组件

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -9,7 +9,10 @@
     "paths": {
       "@/*": ["./*"],
       "@ui/*": ["./modules/ui/*"],
-      "@saas/*": ["./modules/saas/*"]
+      "@saas/*": ["./modules/saas/*"],
+      "@i18n": ["./modules/i18n"],
+      "@config": ["./config"],
+      "@shared/*": ["./modules/shared/*"]
     }
   },
   "include": [
