--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@content-collections/core": "^0.6.2",
+    "@content-collections/mdx": "^0.1.3",
+    "@content-collections/next": "^0.2.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "deepmerge": "^4.3.1",
     "lucide-react": "^0.408.0",
     "next": "15.0.0-rc.0",
     "next-intl": "^3.17.0",
